Fixing NPE
Closes #32906

Signed-off-by: Alexander Schwartz <aschwart@redhat.com>